<resources>
    <string name="app_name">Tripass_Native</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_arthor">Hello, Arthor</string>
    <string name="create_your_trips_with_us">Create your trips with us.</string>
    <string name="add_trip">Add Trip</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_departure">Enter Departure</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="business">Business</string>
    <string name="trips">trips</string>
    <string name="vacation">Vacation</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="updateTrip">Update Trip</string>
    <string name="updateATrip">Update a Trip</string>
    <string-array name="trip_type_array">
        <item>Business</item>
        <item>Vacation</item>
        <item>Health</item>
        <item>Education</item>
    </string-array>
</resources>